defined colors options in tailwind config js

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Manage Landing Pages</title>
 </head>
 <body>
-  <h1 class="text-3xl font-bold">
-    Hello world!
+  <h1 class="text-sm font-bold">
+    Hello Shiv
   </h1>
 </body>
 </html>
