added all the images require to design this project

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   <title>Manage Landing Pages</title>
 </head>
 <body>
-  <h1 class="text-sm font-bold">
+<!-- Navbar -->
+<nav class="relative container mx-auto p-6">
+    <!-- flex container -->
+    <div class="flex items-center justify-between">
+        <!-- Logo -->
+        <div class="pt-2">
+            <img src="" alt="">
+        </div>
+    </div>
     Hello Shiv
-  </h1>
+</nav>
 </body>
 </html>
