--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
     <div class="flex items-center justify-between">
         <!-- Logo -->
         <div class="pt-2">
-            <img src="" alt="">
+            <img src="./img/logo.svg" alt="Logo of Brand">
         </div>
+        <!-- menu items -->
+        <div class="hidden md:flex space-x-6">
+            <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+            <a href="#" class="hover:text-darkGrayishBlue">Product</a>
+            <a href="#" class="hover:text-darkGrayishBlue">About</a>
+            <a href="#" class="hover:text-darkGrayishBlue">Career</a>
+            <a href="#" class="hover:text-darkGrayishBlue">Community</a>
+        </div>
+        <!-- Button -->
+        <a href="#" class="hidden md:flex p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
     </div>
-    Hello Shiv
 </nav>
 </body>
 </html>
