--- a/index.html
+++ b/index.html
@@ -130,7 +130,44 @@
         </div>
     </div>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <!-- flex container -->
+        <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+            <h2 class="text-4xl font-bold text-center">
+                What's Different About Manage?
+            </h2>
+            <!-- Testimonials container -->
+            <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+                <!-- Testimonials 01 -->
+                <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                    <img src="img/avatar-anisha.png" class="w-16 -mt-14" alt="Anisha">
+                    <h5 class="text-lg font-bold">Anisha Li</h5>
+                    <p class="text-sm text-darkGrayishBlue">
+                        normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum.
+                    </p>
+                </div>
+
+                <!-- Testimonials 02 -->
+                <div class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:block">
+                    <img src="img/avatar-ali.png" class="w-16 -mt-14" alt="Ali">
+                    <h5 class="text-lg font-bold">Ali Bravo</h5>
+                    <p class="text-sm text-darkGrayishBlue">
+                        normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum.
+                    </p>
+                </div>
+
+                <!-- Testimonials 03 -->
+                <div class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:block">
+                    <img src="img/avatar-richard.png" class="w-16 -mt-14" alt="Richard">
+                    <h5 class="text-lg font-bold">Richard Harry</h5>
+                    <p class="text-sm text-darkGrayishBlue">
+                        normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <div class="mb-8"></div>
 </body>
 
