--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                     What's Different about Manage
                 </h2>
                 <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
-                    Manage provides all the functionality your team needs, without the complexity. Our software is tailer-made for modern digital product teams.
+                    Manage provides all the functionality your team needs, without the complexity. Our software is
+                    tailer-made for modern digital product teams.
                 </p>
             </div>
             <!-- second col number list -->
@@ -86,7 +87,8 @@
                     <div>
                         <h3 class="hidden mb-4 text-lg font-bold md:block">Track company-wide progress</h3>
                         <p class="text-darkGrayishBlue">
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            It has survived not only five centuries, but also the leap into electronic typesetting,
                         </p>
                     </div>
                 </div>
@@ -104,7 +106,8 @@
                     <div>
                         <h3 class="hidden mb-4 text-lg font-bold md:block">Advance built-in Reports</h3>
                         <p class="text-darkGrayishBlue">
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            It has survived not only five centuries, but also the leap into electronic typesetting,
                         </p>
                     </div>
                 </div>
@@ -122,7 +125,8 @@
                     <div>
                         <h3 class="hidden mb-4 text-lg font-bold md:block">Everything you need in one place</h3>
                         <p class="text-darkGrayishBlue">
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            It has survived not only five centuries, but also the leap into electronic typesetting,
                         </p>
                     </div>
                 </div>
@@ -143,31 +147,120 @@
                     <img src="img/avatar-anisha.png" class="w-16 -mt-14" alt="Anisha">
                     <h5 class="text-lg font-bold">Anisha Li</h5>
                     <p class="text-sm text-darkGrayishBlue">
-                        normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum.
+                        normal distribution of letters, as opposed to using 'Content here, content here', making it look
+                        like readable English. Many desktop publishing packages and web page editors now use Lorem
+                        Ipsum.
                     </p>
                 </div>
 
                 <!-- Testimonials 02 -->
-                <div class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:block">
+                <div
+                    class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:block">
                     <img src="img/avatar-ali.png" class="w-16 -mt-14" alt="Ali">
                     <h5 class="text-lg font-bold">Ali Bravo</h5>
                     <p class="text-sm text-darkGrayishBlue">
-                        normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum.
+                        normal distribution of letters, as opposed to using 'Content here, content here', making it look
+                        like readable English. Many desktop publishing packages and web page editors now use Lorem
+                        Ipsum.
                     </p>
                 </div>
 
                 <!-- Testimonials 03 -->
-                <div class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:block">
+                <div
+                    class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:block">
                     <img src="img/avatar-richard.png" class="w-16 -mt-14" alt="Richard">
                     <h5 class="text-lg font-bold">Richard Harry</h5>
                     <p class="text-sm text-darkGrayishBlue">
-                        normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum.
+                        normal distribution of letters, as opposed to using 'Content here, content here', making it look
+                        like readable English. Many desktop publishing packages and web page editors now use Lorem
+                        Ipsum.
                     </p>
                 </div>
-
+            </div>
+            <!-- Button -->
+            <div class="my-8">
+                <a href="#"
+                    class="p-3 px-6 pt-2 text-white bg-brightRed rounded-sm baseline hover:bg-brightRedLight">Get
+                    Started</a>
             </div>
         </div>
     </section>
+    <!-- CAll of Action Section -->
+    <section id="cta" class="bg-brightRed">
+        <!-- flex container -->
+        <div class="flex flex-col container items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0">
+            <!-- Heading -->
+            <h2 class="text-5xl font-bold lading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
+                Simplify how your team works today
+            </h2>
+            <!-- button -->
+            <div>
+                <a href="#"
+                    class="p-3 px-6 pt-2 text-brightRed bg-white rounded-sm baseline hover:bg-black hover:text-white">Meet the team now</a>
+            </div>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer class="bg-veryDarkBlue">
+        <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
+            <!-- Logo and social links container -->
+            <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+                <!-- logo -->
+                <div class="mx-auto my-6 text-center text-white md:hidden">
+                    Copyright &copy; 2024, All rights reserved.
+                </div>
+                <div>
+                    <img src="img/logo-white.svg" alt="Logo footer" class="h-8 my-2">
+                </div>
+                <!-- social links -->
+                <div class="flex justify-center space-x-4">
+                    <a href="#">
+                        <img src="img/icon-facebook.svg" alt="facebook" class="w-6 h-6">
+                    </a>
+                    <a href="#">
+                        <img src="img/icon-instagram.svg" alt="instagram" class="w-6 h-6">
+                    </a>
+                    <a href="#">
+                        <img src="img/icon-pinterest.svg" alt="pinterest" class="w-6 h-6">
+                    </a>
+                    <a href="#">
+                        <img src="img/icon-twitter.svg" alt="twitter" class="w-6 h-6">
+                    </a>
+                    <a href="#">
+                        <img src="img/icon-youtube.svg" alt="youtube" class="w-6 h-6">
+                    </a>
+                </div>
+            </div>
+            <!-- list container -->
+            <div class="flex justify-around space-x-32">
+                <div class="flex flex-col space-y-3 text-white">
+                    <a href="#" class="hover:text-brightRed">Home</a>
+                    <a href="#" class="hover:text-brightRed">Pricing</a>
+                    <a href="#" class="hover:text-brightRed">Product</a>
+                    <a href="#" class="hover:text-brightRed">About</a>
+                </div>
+                <div class="flex flex-col space-y-3 text-white">
+                    <a href="#" class="hover:text-brightRed">Career</a>
+                    <a href="#" class="hover:text-brightRed">Community</a>
+                    <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+                    <a href="#" class="hover:text-brightRed">Contact Us</a>
+                </div>
+            </div>
+            <!-- Input container -->
+            <div class="flex flex-col justify-between">
+                <form>
+                    <div class="flex space-x-3">
+                        <input type="text" class="flex-1 px-4 rounded-md focus:outline-none" placeholder="Updated in your inbox">
+                        <button class="px-6 py-2 text-white rounded-md bg-brightRed hover:bg-brightRedLight focus:outline-none">Go</button>
+                    </div>
+                </form>
+                <!-- Copyright -->
+                <div class="hidden text-white md:block">
+                    Copyright &copy; 2024, All rights reserved
+                </div>
+            </div>
+        </div>
+    </footer>
     <div class="mb-8"></div>
 </body>
 
