--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
             <a href="#"
                 class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:flex">Get
                 Started</a>
+
+            <!-- Hamburger Icon  -->
+            <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+            </button>
+
+        </div>
+
+        <!-- Mobile Menu -->
+        <div class="md:hidden">
+            <div id="menu" class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+                <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Product</a>
+                <a href="#" class="hover:text-darkGrayishBlue">About</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Career</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Community</a>
+            </div>
         </div>
     </nav>
     <!-- Hero Section -->
@@ -196,7 +215,7 @@
             <!-- button -->
             <div>
                 <a href="#"
-                    class="p-3 px-6 pt-2 text-brightRed bg-white rounded-sm baseline hover:bg-black hover:text-white">Meet the team now</a>
+                    class="flex p-3 px-6 pt-2 text-brightRed bg-white rounded-sm baseline hover:bg-black hover:text-white">Meet the team now</a>
             </div>
         </div>
     </section>
@@ -262,6 +281,7 @@
         </div>
     </footer>
     <div class="mb-8"></div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
